[profile.dev]
opt-level = 1
debug = false
incremental = true
lto = "off"

[profile.release]
opt-level = 1
debug = false
incremental = false
lto = "fat"

[package]
name = "llamapak"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12" , features = ["tokio"]}
tokio = { version = "1.32", features = ["full"] }
sha2 = "0.10"
walkdir = "2.3"
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "json"] }
tracing-appender = "0.2"
lazy_static = "1.5.0"
tempfile = "3.19.1"
thiserror = "1.0"
rustls-pemfile = "2.2.0"
rcgen = "0.11"